$Id$

2006-12-18 Roy Hills <Roy.Hills@nta-monitor.com>

	* Added experimental support for RFC 3947 NAT-Traversal.

2006-12-17 Roy Hills <Roy.Hills@nta-monitor.com>

	* Added CRACK (128) to auth map.  This is defined in
	  draft-harkins-ipsra-crack-00 "IKE Challenge/Response for
	  Authenticated Cryptographic Keys", but I've not seen it used in
	  practice.

2006-11-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* isakmp.c: Moved all the ID/Name maps into isakmp.c as global
	  consts.  Other source files that need to reference them do so
	  by declaring them as extern.

	* utils.c: New functions name_or_number() and str_ccmp() which
	  allow a string containing either a number or a name from the
	  specified map to be used.

2006-11-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Changed --ranssrc option to --sourceip, and allow it
	  to take an IP address or the string "random".  When --sourceip is
	  specified, we no longer attempt to read from the socket as reading
	  UDP from a raw socket doesn't work on all OSes and we are unlikely
	  to receive any return data if we've spoofed the source address
	  anyway.

	* ike-vendor-ids: Update strongSwan vendor IDs based on stronSwan
	  4.0.5

2006-11-23 Roy Hills <Roy.Hills@nta-monitor.com>

	* psk-crack.c: New function load_psk_params() to read the data from
	  the psk parameters file into a list of structures.  This moves the
	  psk file reading loop out of main(), and also allows more flexible
	  selection of the psk cracking order as all the psks are in memory.

	* psk-crack.c: New function compute_hash(), which does the real work
	  of computing the hash given the PSK parameters and a candidate
	  password.  This function is defined as "static inline" because it
	  is called from a tight loop, and inlining significantly improves
	  performance.

	* psk-crack.c: New function open_dict_file(), which opens the
	  dictionary file.  This function reduces the size of main() to make
	  it more readable.
