@@ -1,5 +1,12 @@
 $Id$
 
+2006-12-21 Roy Hills <Roy.Hills@nta-monitor.com>
+
+	* Added --nat-t option to enable RFC 3947 NAT Traversal.
+	  This option adds the Non-ESP marker to outbound packets and
+	  strips the marker from responses.  It also changes the default
+	  source and destination UDP ports to 4500.
+
 2006-12-18 Roy Hills <Roy.Hills@nta-monitor.com>
 
 	* Added experimental support for RFC 3947 NAT-Traversal.
